--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/holepunchto/tiny-nbd-server#readme",
   "devDependencies": {
     "standard": "^17.0.0"
+  },
+  "bin": {
+    "nbdc" : "nbdc.js"
   }
 }
