--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "bin": {
     "nbdc": "nbdc.js"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8",
+    "shellblazer": "^1.0.6"
   }
 }
