--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Network block device server for JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard && brittle test/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/holepunchto/network-block-device#readme",
   "devDependencies": {
-    "standard": "^17.0.0"
+    "brittle": "^1.3.5",
+    "standard": "^17.0.0",
+    "shellblazer": "^1.0.6"
   },
   "bin": {
     "nbdc": "nbdc.js"
