--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [lts/*]
-        # windows and particularly macos CI are very expensive on github, so skipping
-        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
