--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,10 @@ name: Build Status
 on:
   push:
     branches:
-      - main
+      - timing
   pull_request:
     branches:
-      - main
+      - timing
 jobs:
   build:
     strategy:
